# CompGraph

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CompGraph  README.md  main.cpp  main.cpp.orig
CompGraph_autogen/: deps
CompGraph_autogen/K6S233IZAZ/: moc_mainwindow.cpp.d
Google_tests/: AbsoluteDateTest.cpp  CMakeLists.txt  Google_Tests_run  dummytest.cpp
Google_tests/Google_Tests_run_autogen/: deps
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h
Google_tests/lib/googlemock/test/: gmock_output_test.py
Google_tests/lib/googletest/gtest_autogen/: deps
Google_tests/lib/googletest/gtest_main_autogen/: deps
Google_tests/lib/googletest/test/: gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
Google_tests/math_tests/: MathCastTest.cpp  Matrix3DTest.cpp  Matrix4DTest.cpp  PixelBufferTest.cpp  Point2DTest.cpp  Point3DTest.cpp  Vector2DTest.cpp  Vector3DTest.cpp  Vector4DTest.cpp
Google_tests/obj_reader/: ObjReaderTest.cpp
Google_tests/render_engine/: CameraTest.cpp  GraphicConveyorTest.cpp  RasterMethods.cpp  RemoveElementsTests.cpp
forms/: mainwindow.cpp  mainwindow.ui  mainwindow.ui.orig
forms/headers/: mainwindow.h  mainwindow.h.orig
forms/src/: mainwindow.cpp  mainwindow.cpp.orig
headers/: Camera.h  GraphicConveyor.h  Matrix3D.h  Matrix4D.h  Model.h  ObjReader.h  ObjReaderException.h  ObjReaderTest.h  ObjWriter.h  Point2D.h  Polygon.h  RenderEngine.h  Triangle.h  Vector2D.h  Vector3D.h  Vector4D.h  mainwindow.h
math/: Matrix3D.cpp  Matrix4D.cpp  Point2D.cpp  Point2D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector4D.cpp  Vector4D.h
math/headers/: DepthBuffer.h  MathCast.h  MathClass.h  Matrix3D.h  Matrix4D.h  PixelBuffer.h  Point2D.h  Point3D.h  Point3D.h.orig  Vector2D.h  Vector3D.h  Vector4D.h  МатематическийКласс.h
math/src/: DepthBuffer.cpp  MathCast.cpp  MathClass.cpp  Matrix3D.cpp  Matrix4D.cpp  PixelBuffer.cpp  Point2D.cpp  Point3D.cpp  Point3D.cpp.orig  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp  МатематическийКласс.cpp
model/: Model.cpp  Polygon.cpp  Polygon.h  Triangle.cpp
model/headers/: Model.h  Polygon.h  Triangle.h
model/src/: Polygon.cpp
obj_utils/objreader/headers/: ObjReader.h
obj_utils/objreader/src/: ObjReader.cpp
obj_utils/objwriter/headers/: ObjWriter.h
obj_utils/objwriter/src/: ObjWriter.cpp
objreader/: ObjReader.cpp  ObjReaderException.cpp  ObjReaderTest.cpp
objreader/headers/: ObjReader.h  ObjReaderException.h
objreader/src/: ObjReader.cpp
objwriter/: ObjWriter.cpp
objwriter/headers/: ObjWriter.h
objwriter/src/: ObjWriter.cpp
render_engine/: Camera.cpp  Camera.h  GraphicConveyor.cpp  GraphicConveyor.h  RenderEngine.cpp
render_engine/headers/: Camera.h  GraphicConveyor.h  Illumination.h  Mesh.h  Rasterization.h  RenderEngine.h  RenderEngine.h.orig  Renderable.h  Texturezation.h  TypeOfRender.h
render_engine/src/: Camera.cpp  GraphicConveyor.cpp  Illumination.cpp  Mesh.cpp  Rasterization.cpp  RenderEngine.cpp  RenderEngine.cpp.orig  Texturezation.cpp
resources/: buttonStyle.css  resources.qrc
src/forms/: CustomView.cpp  CustomView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/math/headers/: DepthBuffer.h  MathOperations.h  Matrix3D.h  Matrix4D.h  PixelBuffer.h  Point2D.h  Point3D.h  Vector2D.h  Vector3D.h  Vector4D.h
src/math/src/: MathCast.cpp  MathOperations.cpp  Matrix3D.cpp  Matrix4D.cpp  Point2D.cpp  Point3D.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
src/model/headers/: Model.h
src/model/src/: Model.cpp  Polygon.cpp  Triangle.cpp
src/obj_utils/objreader/: ObjReader.cpp
src/obj_utils/objwriter/: ObjWriter.cpp  ObjWriter.h
src/render_engine/headers/: Camera.h  GraphicConveyor.h  Illumination.h  Light.h  Material.h  Mesh.h  Rasterization.h  RemoveElements.h  RenderEngine.h  Scene.h  Texture.h  Texturing.h  TriangleCoord.h
src/render_engine/src/: Camera.cpp  GraphicConveyor.cpp  Illumination.cpp  Material.cpp  Mesh.cpp  Rasterization.cpp  RemoveElements.cpp  RenderEngine.cpp  Scene.cpp  Texture.cpp  Texturing.cpp
